    * subtitle switching and language code displaying for Matroska
    * support .vp5 file format (AVI variant)
    * seeking for audio-only ASF files fixed
    * improved MP3 detection
    * AVC in .mp4 files
    * raw H.261 files via lavf
    * improved seeking precision in MPEG files
    * better subtitle language code handling for MKV files
    * support DVHS files and H.264 over MPEG-TS

    Streaming:
    * -cache-min and -cache-prefill options added
    * compilation fix for newer LIVE.COM versions
    * make ASF without ECC work
    * support for MMS on non-standard port
    * EOF detected in Real RTSP streams

    FFmpeg/libavcodec:
    * reduced resolution decoding
    * new experimental wavelet-based snow video codec
    * new sonic audio codec
    * TechSmith Camtasia video decoder
    * IBM Ultimotion video decoder
    * QuickDraw video decoder
    * Creative ADPCM decoder
    * Miro VideoXL decoder
    * Sierra online audio files demuxer and decoder
    * QPEG video decoder
    * Electronic Arts Game Multimedia format demuxer
    * H.261 fixes, H.261 encoder
    * fix VIS accelerated code
    * DTS support via libdts
    * many DV fixes, seek in raw DV files
    * support AAC in MOV files
    * RV10, RV20 fixes
    * AVI demuxer cleanup, palette change support
    * iTunes metadata support
    * HuffYUV fixes (endianness, RGB32 predictor, median encoding, interlacing)
    * SSE optimizations for 4x4 compare function
    * epzs motion search enhancements
    * quad tree based motion compensation
    * MPEG-4 qpel MMX2/3DNow! optimizations
    * H.264: lot of fixes and MMX2/3DNow! optimizations
    * AVC1 (H.264 without sync word in .mp4 files) support
    * H.264 qpel motion compensation
    * Indeo3 grayscale decoding
    * preliminary Truemotion 24 bit decoder
    * avizlib encoder fixed
    * trellis quantization support in H.263
    * DCT optimizations
    * AltiVec support on AmigaOS4
    * adapt MMX/MMX2/SSE/3DNow! optimizations to work on x86_64